chore: 메서드 문법 수정